# tm-v71-tools

./: .gitignore  .pre-commit-config.yaml  MEMORYMAP.md  Makefile  README.md  TM-V71-PROGRAMMING.md  memory.ksy  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
.github/workflows/: pythonapp.yml  unittests.yml
scripts/: gen-command-docs.sh  remove-command-docs.sh  update-command-docs.sh
tmv71/: .cli.py.swp  .schema.py.swp  __init__.py  api.py  cli.py  device.py  memory.py  response.py  schema.py
tmv71/tests/: conftest.py  fakeserial.py  test_api.py  test_cli.py
tmv71/tests/functional/: test_memory.py
tmv71/tests/unit/: .test_api.py.swp  conftest.py  fakeserial.py  test_api.py  test_cli.py
