[metadata]
name = tm-v71-tools
version = attr: tmv71.__version__
description = Tool for controlling a Kenwood TM-V71 radio
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/larsks/tm-v71-tools
author = Lars Kellogg-Stedman
author_email = lars@oddbit.com

[options]
packages = find:
install_requires =
    click
    pyserial
    hexdump

[options.entry_points]
console_scripts =
    tmv71 = tmv71.cli:main
